--- a/sequence/templates/main.html
+++ b/sequence/templates/main.html
@@ -10,7 +10,7 @@
 <body>
     <h1 align="center">内网邮件问答系统</h1>
     <br>
-    <p align="center">推荐问题：项目如何关闭、ZFI17122</p>
+    <p align="center">推荐问题：内网邮箱项目的相关知识、邮件为什么删除不掉</p>
     <!--<p align="center">问题类型：项目、CJ32项目预算</p>-->
     <center>
     <form action="/info" method="get" align="center">
@@ -25,3 +25,4 @@
     <!--<p align="right">{{type}}</p>-->
 </body>
 </html>
+
